--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: orange;
+}
+.gal {
+  width: 100vw;
+  height: 300px;
+  margin-top: 3em;
+}
+.box {
+  height: 250px;
+  width: 500px;
+  border: solid 3px orange;
+  border-radius: 5px;
+  margin: auto;
+}
+.image {
+  height: 100%;
+  width: 100%;
+}
+.text {
+  color: orange;
   text-align: center;
+  padding-top: 1em;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.buttonContainer {
+  width: 100vw;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.button {
+  height: 50px;
+  width: 100px;
+  margin: 1em;
+  color: orange;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input {
+  margin: auto;
+}
+.container {
+  width: 100vw;
 }
